# cpp-fundamentals

./: .clang-format  .gitignore  README.md  tatus
.github/: CODEOWNERS
00-pre-work/: bad_example.cpp  bad_example2.cpp  codestyle.md  good_example.cpp  good_example2.cpp  setup_ubuntu.md  setup_windows.md
02-types/: 01-fundamental-types.md  02-aliases.md  03-arithmetics.md  04-arrays.md  05-references.md  06-enums.md  07-pointers.md  08-hazards.md
03-language-elements/: 01-functions.md  02-branches.md  03-loops.md  04-scopes.md  05-const.md
04-stl-basics/: 00-intro.md  01-string.md  02-vector.md  03-range-for.md  04-list.md  05-map.md
05-recap-homework/: 00-recap.md  01-homework.md  01-tasks-description.md  02-delivery.md  03-recap.md  04-tasks-description.md  05-delivery.md  06-recap.md  07-tasks-description.md  08-delivery.md
homework/calculate/: .calculate.hpp.swo  .calculate.hpp.swp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  calculate-ut[1]_include.cmake  calculate-ut[1]_tests.cmake  calculate.cpp  calculate.hpp  cmake_install.cmake  main  main.cpp  test.cpp
homework/calculate/Testing/Temporary/: CTestCostData.txt
html/: 02-types.html  03-language_elements.html  04-stl-basics.html  05-homework.html  cpp_fundamentals1.html  cpp_fundamentals2.html  cpp_fundamentals3.html
intro/: about_lukasz.md  about_you.md  coffee_break.md  contract.md  index.html  lunch_break.md
module1/: 01_types.en.md  02_functions.en.md  02_functions.pl.md  03_branches.en.md  03_branches.pl.md  04_loops.en.md  04_loops.pl.md  05_arrays.en.md  (+17 more)
(+216 files in other folders)
